Now adds the pokemon that is added to the party to local storage. Also I fixed the sideabar. it was taking up too much of th screen space.

--- a/content/content.css
+++ b/content/content.css
@@ -6,7 +6,7 @@
   /*float: left;*/
   text-align: center;
   width: 100%;
-  height:100vh;
+  height:93vh;
   overflow: auto;
   margin-top: auto;
   margin-bottom: auto;
